force-app/main/default/objects/Assignment_History__c/Assignment_History__c.object-meta.xml
<CustomObject>
    <description>Assignment History object stores the information about owner assignment to Account. An Automatic process creates an Assignment History record whenever an Account’s BillingPostalCode is changed or populated for the first time.</description>
    <label>Assignment History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Assignment History  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>