force-app/main/default/objects/Assignment_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the information about the user who changed the BillingPostalCode on the Account</description>
    <inlineHelpText>The user who changed the BillingPostalCode</inlineHelpText>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>