force-app/main/default/objects/Assignment_History__c/fields/New_Territory__c.field-meta.xml
<CustomField>
    <fullName>New_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The matching Territory record for the new zip code</description>
    <inlineHelpText>This field indicates the matching Territory record for the new zip code</inlineHelpText>
    <label>New Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Assignment Histories</relationshipLabel>
    <relationshipName>Assignment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>