force-app/main/default/objects/Assignment_History__c/fields/Previous_Territory__c.field-meta.xml
<CustomField>
    <fullName>Previous_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The matching Territory record for the prior zip code</description>
    <inlineHelpText>This field indicates the matching Territory record for the prior zip code</inlineHelpText>
    <label>Previous Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Assignment Histories (Previous Territory)</relationshipLabel>
    <relationshipName>Assignment_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>